--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </audio>
 
   <div class="container" id="step1">
-    <img src="https://placekitten.com/300/300" alt="Yavru Kedi" class="cute-img">
+    <img src="images.jpeg" alt="Yavru Kedi" class="cute-img">
     <h2>Dulcedo Languorem hastalığına yakalanmışsın!</h2>
     <p>Bunun nedenini öğrenmek ister misin?</p>
     <button class="btn" onclick="showStep2()">Evet</button>
@@ -92,7 +92,7 @@
   </div>
 
   <div class="container hidden" id="step2">
-    <img id="customImage" src="https://placekitten.com/301/301" alt="Tatlı Kedi" class="cute-img">
+    <img id="customImage" src="images (1).jpeg" alt="Tatlı Kedi" class="cute-img">
     <p>
       Bu hastalık bir tatlılık hastalığıdır. Bu hastalık sevdiğinden uzak kalınca oluşur.<br>
       Bu yüzden hemen benim kollarımın arasına girip uyuman gerek.<br>
@@ -104,7 +104,7 @@
   </div>
 
   <div class="container hidden" id="step3">
-    <img src="https://placekitten.com/302/302" alt="Mutlu Kedi" class="cute-img">
+    <img src="Date ---cr-dakadexiaobohe#cutecat#cats #cat #funnycat #date #couple#boyfriend #girlfriend #fyp.jpg" alt="Mutlu Kedi" class="cute-img">
     <h2>Tebrikler, iyileştiniz!</h2>
     <p>Evrenin en mükemmel çifti oldunuz.</p>
   </div>
