--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </audio>
 
   <div class="container" id="step1">
-    <img id="customImage" src="images.jpg" alt="Yavru Kedi" class="cute-img">
+    <img id="customImage" src="kedi1.jpg" alt="Yavru Kedi" class="cute-img">
     <h2>Dulcedo Languorem hastalığına yakalanmışsın!</h2>
     <p>Bunun nedenini öğrenmek ister misin?</p>
     <button class="btn" onclick="showStep2()">Evet</button>
@@ -104,7 +104,7 @@
   </div>
 
   <div class="container hidden" id="step3">
-    <img src="Date ---cr-dakadexiaobohe#cutecat#cats #cat #funnycat #date #couple#boyfriend #girlfriend #fyp.jpg" alt="Mutlu Kedi" class="cute-img">
+    <img src="kedi3.jpg" alt="Mutlu Kedi" class="cute-img">
     <h2>Tebrikler, iyileştiniz!</h2>
     <p>Evrenin en mükemmel çifti oldunuz.</p>
   </div>
