--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </audio>
 
   <div class="container" id="step1">
-    <img src="kedi1.jpeg" alt="Yavru Kedi" class="cute-img">
+    <img src="kedi11.jpg" alt="Yavru Kedi" class="cute-img">
     <h2>Dulcedo Languorem hastalığına yakalanmışsın!</h2>
     <p>Bunun nedenini öğrenmek ister misin?</p>
     <button class="btn" onclick="showStep2()">Evet</button>
