--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
+    <source src="https://youtu.be/RFLyozPOeVQ?si=1giD6BVoMjEmSV_9" type="audio/mpeg">
     Tarayıcınız müziği desteklemiyor.
   </audio>
 
