--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="https://youtu.be/RFLyozPOeVQ?si=1giD6BVoMjEmSV_9" type="audio/mpeg">
-    Tarayıcınız müziği desteklemiyor.
+    <source src="sarki1.mp3" type="audio/mpeg"
   </audio>
 
   <div class="container" id="step1">
