--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="sarkim.mp3" type="audio/mpeg"
+    <source src="sarkim.mp3" type="audio/mpeg">
   </audio>
 
   <div class="container" id="step1">
